...
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/edit_text_border"
                android:visibility="gone" />

            <!-- not visible in admins perspective -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                app:layout_constraintTop_toBottomOf="@id/facility_name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
