<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- This list view can only be accessed by admin, lets them browse-->
    <ListView
        android:id="@+id/admin_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbarThumbVertical="@color/secondaryGreyColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:choiceMode="singleChoice"
        android:listSelector="@color/secondaryGreyColor"/>

    <!-- This add button can only be accessed by admin -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="328dp"
        android:contentDescription="@string/create_button"
        android:padding="50dp"
        android:paddingVertical="100dp"
        app:backgroundTint="@color/primaryPinkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.930"
        app:srcCompat="@drawable/delete"
        app:tint="@android:color/white"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>