...
                    android:contentDescription="@string/organizer_options_events"
                    android:src="@drawable/setting"
                    android:visibility="gone" />

                <!-- This delete button can only be accessed by admin -->
                <ImageButton
                    android:id="@+id/admin_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/organizer_opt_button"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/white"
...
